<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#fff7f7f7"
    android:orientation="vertical" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:background="@android:color/black"
        android:padding="5dp" >

        <TextView
            android:id="@+id/action_back"
            style="@style/BaseText"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:text="@string/action_back"
            android:textColor="@android:color/white"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/title"
            style="@style/BaseText"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_centerHorizontal="true"
            android:gravity="center_vertical"
            android:text="@string/scan_devices_title"
            android:textColor="@android:color/white"
            android:textSize="18sp" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginTop="20dp"
        android:background="#fffffaf0"
        android:gravity="center"
        android:orientation="horizontal" >

        <View
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:background="#ff666666" />

        <TextView
            style="@style/BaseText"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_centerInParent="true"
            android:drawableLeft="@drawable/ble_caution"
            android:drawablePadding="5dp"
            android:gravity="center"
            android:text="@string/weight_scan_ble_tip"
            android:textColor="#ff666666"
            android:textSize="13sp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:layout_alignParentBottom="true"
            android:background="#ff666666" />
    </RelativeLayout>

    <TextView
        style="@style/BaseText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:gravity="center"
        android:text="@string/weight_scan_tip"
        android:textColor="#ff666666"
        android:textSize="16sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/scan_status"
        style="@style/BaseText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:text="@string/weight_scaning"
        android:textColor="#ff666666" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:scaleType="fitXY"
            android:layout_centerInParent="true"
            android:src="@drawable/sync_btn" />
    </RelativeLayout>

</LinearLayout>